--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,7 +1,6 @@
 <%= link_to 'Strona główna', controller: 'home' %><br>
 <%= link_to 'Strona główna', root_path %><br>
 <%= link_to 'O mnie', home_about_path %><br>
-<h1>Witaj w mojej aplikacji</h1>
-<p>Wrzucaj swoje piny</p>
-
+<h1>O mnie</h1>
+<p>Nazywam się Marcin i jestem twórcą tej aplikacji</p>
 
